# pirate-finops

./: BURN_MECHANIC.md  Cargo.toml  GAME_BALANCE.md  GAME_BALANCE_v2.md  GAME_DESIGN_DOCUMENT.md  README.md  WINNABLE_BALANCE.md  build-wasm.sh  index.html
.cargo/: config.toml
.github/workflows/: deploy.yml
src/: components.rs  lib.rs  main.rs  resources.rs  simulator.rs  systems.rs  ui.rs
